--- a/Source_Code/Basic_Nav_Prototype/css/bootstrap.css
+++ b/Source_Code/Basic_Nav_Prototype/css/bootstrap.css
@@ -6127,9 +6127,9 @@ body.modal-open,
 
 .carousel-indicators {
   position: absolute;
-  bottom: 10px;
   left: 50%;
   z-index: 15;
+  top: 450px;
   width: 60%;
   padding-left: 0;
   margin-left: -30%;
@@ -6164,7 +6164,6 @@ body.modal-open,
   padding-top: 20px;
   padding-bottom: 20px;
   color: #ffffff;
-  text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
 
