New styling; login system expanded
+New color and layout scheme
+Login system refined (now works with mysql db)

--- a/Source_Code/Basic_Nav_Prototype/css/iola.css
+++ b/Source_Code/Basic_Nav_Prototype/css/iola.css
@@ -1,6 +1,6 @@
 /* Div for the lefthand floating sidebar expand/contract button */
 #float{
-    background:#ebebeb;
+    background:#222222;
     width : 17px;
     height : 100%;
     display : table-cell;
