--- a/Source_Code/Basic_Nav_Prototype/css/iola.css
+++ b/Source_Code/Basic_Nav_Prototype/css/iola.css
@@ -1,19 +1,148 @@
+/* Modifies body */
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  /* background-color: #389eb2; CHANGES COLOR TO BTN-BLUE */
+}
+
 /* Div for the lefthand floating sidebar expand/contract button */
 #float{
     background:#222222;
-    width : 17px;
+    width : 20px;
     height : 100%;
     display : table-cell;
     border : 1px solid black;
     float:none;
 	position:fixed;
 }
+#float2{
+    background:#222222;
+    width : 34px;
+    height : 20%;
+    display : table-cell;
+	border : 1px solid black;
+    float:none;
+	position:fixed;
+	top:30%;
+}
 .bottomaligned {position:absolute; bottom:0;  margin-bottom:50px; left: 0;}
+.ba {position:fixed; top:32%;  margin-bottom:0; margin-left: 5px;}
 
-/*img {
-  border: 0;
-  box-shadow: 0 12px 12px -10px #c4c4c4;
--webkit-box-shadow: 0 17px 22px -20px #c4c4c4;
--moz-box-shadow: 0 12px 12px -10px #c4c4c4;
-}*/
+/* A few custom-colored buttons. */
+/* useful generator: http://twitterbootstrap3buttons.w3masters.nl/ */
+ .btn-orange { 
+  background-color: #df6d0c;  	/* primary color */
+  border-color: #df6d0c;
+  color: #ffffff;				/* inner text color */
+}
+.btn-orange:hover,
+.btn-orange:focus,
+.btn-orange:active,
+.btn-orange.active {
+  background-color: #c7610b;	/* button active colors */
+  border-color: #af5509;
+  color: #f0f0f0;
+}
+.btn-orange.disabled:hover,
+.btn-orange.disabled:focus,
+.btn-orange.disabled:active,
+.btn-orange.disabled.active,
+.btn-orange[disabled]:hover,
+.btn-orange[disabled]:focus,
+.btn-orange[disabled]:active,
+.btn-orange[disabled].active,
+fieldset[disabled] .btn-orange:hover,
+fieldset[disabled] .btn-orange:focus,
+fieldset[disabled] .btn-orange:active,
+fieldset[disabled] .btn-orange.active {
+  background-color: #df6d0c;
+  border-color: #df6d0c;
+}
 
+.btn-blue {
+  background-color: #389eb2;
+  border-color: #389eb2;
+  color:#ffffff;
+}
+.btn-blue:hover,
+.btn-blue:focus,
+.btn-blue:active,
+.btn-blue.active {
+  background-color: #328d9f;
+  border-color: #2c7c8b;
+    color:#f0f0f0;
+}
+.btn-blue.disabled:hover,
+.btn-blue.disabled:focus,
+.btn-blue.disabled:active,
+.btn-blue.disabled.active,
+.btn-blue[disabled]:hover,
+.btn-blue[disabled]:focus,
+.btn-blue[disabled]:active,
+.btn-blue[disabled].active,
+fieldset[disabled] .btn-blue:hover,
+fieldset[disabled] .btn-blue:focus,
+fieldset[disabled] .btn-blue:active,
+fieldset[disabled] .btn-blue.active {
+  background-color: #389eb2;
+  border-color: #389eb2;
+}
+
+.btn-tan {
+  background-color: #feebc3;
+  border-color: #feebc3;
+  color: #000000;
+}
+.btn-tan:hover,
+.btn-tan:focus,
+.btn-tan:active,
+.btn-tan.active {
+  background-color: #fee3aa;
+  border-color: #fdda91;
+}
+.btn-tan.disabled:hover,
+.btn-tan.disabled:focus,
+.btn-tan.disabled:active,
+.btn-tan.disabled.active,
+.btn-tan[disabled]:hover,
+.btn-tan[disabled]:focus,
+.btn-tan[disabled]:active,
+.btn-tan[disabled].active,
+fieldset[disabled] .btn-tan:hover,
+fieldset[disabled] .btn-tan:focus,
+fieldset[disabled] .btn-tan:active,
+fieldset[disabled] .btn-tan.active {
+  background-color: #feebc3;
+  border-color: #feebc3;
+}
+
+.btn-gray {
+  background-color: #3f3f3f;
+  border-color: #3f3f3f;
+  color:#ffffff;
+}
+.btn-gray:hover,
+.btn-gray:focus,
+.btn-gray:active,
+.btn-gray.active {
+  background-color: #323232;
+  border-color: #262626;
+    color:#f0f0f0;
+
+}
+.btn-gray.disabled:hover,
+.btn-gray.disabled:focus,
+.btn-gray.disabled:active,
+.btn-gray.disabled.active,
+.btn-gray[disabled]:hover,
+.btn-gray[disabled]:focus,
+.btn-gray[disabled]:active,
+.btn-gray[disabled].active,
+fieldset[disabled] .btn-gray:hover,
+fieldset[disabled] .btn-gray:focus,
+fieldset[disabled] .btn-gray:active,
+fieldset[disabled] .btn-gray.active {
+  background-color: #3f3f3f;
+  border-color: #3f3f3f;
+}
