--- a/Source_Code/Basic_Nav_Prototype/css/bootstrap.css
+++ b/Source_Code/Basic_Nav_Prototype/css/bootstrap.css
@@ -320,7 +320,15 @@ body {
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #428bca;
+  background: #428bca; /* Old browsers */
+background: -moz-linear-gradient(top,  #428bca 0%, #fff9f9 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#428bca), color-stop(100%,#fff9f9)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #428bca 0%,#fff9f9 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #428bca 0%,#fff9f9 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #428bca 0%,#fff9f9 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #428bca 0%,#fff9f9 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#428bca', endColorstr='#fff9f9',GradientType=0 ); /* IE6-9 */
+
 }
 
 input,
@@ -4961,8 +4969,9 @@ a.list-group-item.active > .badge,
     padding-bottom: 18px;
   }
   .container .jumbotron {
-    padding-right: 60px;
+  /*  padding-right: 60px;
     padding-left: 60px;
+    */
   }
   .jumbotron h1 {
     font-size: 63px;
