--- a/Source_Code/Basic_Nav_Prototype/css/iola.css
+++ b/Source_Code/Basic_Nav_Prototype/css/iola.css
@@ -7,7 +7,7 @@ body {
 }
 
 /* Div for the lefthand floating sidebar expand/contract button */
-#float{
+/*#float{
     background:#222222;
     width : 20px;
     height : 100%;
@@ -15,7 +15,7 @@ body {
     border : 1px solid black;
     float:none;
 	position:fixed;
-}
+}*/
 #float2{
     background:#222222;
     width : 34px;
@@ -26,7 +26,9 @@ body {
 	border : 1px solid black;
     float:none;
 	position:fixed;
-	top:30%;
+	top:15%;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 .bottomaligned {position:absolute; bottom:0;  margin-bottom:50px; left: 0;}
 .ba {position:fixed;  margin-bottom:50px; margin-left: 8px;}
