--- a/Source_Code/Basic_Nav_Prototype/css/bootstrap.css
+++ b/Source_Code/Basic_Nav_Prototype/css/bootstrap.css
@@ -669,6 +669,10 @@ blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
   border-left: 5px solid #3f3f3f;
+  background:#dfdfdf; 
+  border-top-right-radius:15px; 
+  border-bottom-left-radius:15px;
+  border-bottom-right-radius:15px;
 }
 
 blockquote p {
